export class Action {
  public id!: number;
  public name!: string;
}
