export class UserRole {
  public id!: number;
  public name!: string;
}
